# profile.mobile.platform.core.uifw.cbhm

./: .gitignore  CMakeLists.txt  LICENSE.APLv2  cbhm.manifest  project.config
daemon/: CMakeLists.txt  cbd.c  cbd_appdata.h  cbd_clipdrawer.c  cbd_clipdrawer.h  cbd_clipdrawer_x.c  cbd_clipdrawer_x.h  cbd_converter.c  cbd_converter.h  cbd_converter_wl.c  cbd_converter_wl.h  cbd_converter_x.c  cbd_converter_x.h  cbd_handler.h  cbd_handler_wl.c  cbd_handler_wl.h  cbd_handler_x.c  cbd_handler_x.h  cbd_item_manager.c  cbd_item_manager.h  cbd_storage.c  cbd_storage.h  cbd_utils.c  cbd_utils.h  cbhm_error.h  cbhm_log.h  cbhmd.c  cbhmd.h  cbhmd_app_data.h  cbhmd_appdata.h  cbhmd_clipdrawer.c  cbhmd_clipdrawer.h  cbhmd_clipdrawer_x.c  cbhmd_convert.c  cbhmd_convert.h  cbhmd_converter.c  cbhmd_converter.h  cbhmd_converter_wl.c  cbhmd_converter_wl.h  cbhmd_converter_x.c  (+33 more)
daemon/po/: CMakeLists.txt  fi.po  hy.po  is.po  it_IT.po  kk.po  kn.po  ko_KR.po  lv.po  mr.po  ne.po  or.po  pt_BR.po  pt_PT.po  uz.po  zh_TW.po
data/themes/: cbhmdrawer.edc
packaging/: .cbhm.spec.swp  cbhm.path  cbhm.service  cbhm.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  ja_JP.po  ka.po  lt.po  mk.po  ml.po  nb.po  nl.po  pa.po  pl.po  ro.po  ru_RU.po  si.po  sk.po  sl.po  sr.po  sv.po  ta.po  (+6 more)
res/edje/: cbhmdrawer.edc  popup_layout.edc  scroller.edc
src/: cbhm.h  clipdrawer.c  clipdrawer.h  converter.c  converter.h  item_manager.c  item_manager.h  main.c  storage.c  storage.h  wlconverter.c  wlconverter.h  wlhandler.c  wlhandler.h  xconverter.c  xconverter.h  xhandler.c  xhandler.h
systemd/: cbhm.service
