CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(cbhm C)

INCLUDE(FindPkgConfig)

SET(DAEMON "${PROJECT_NAME}")

SET(PREFIX "${CMAKE_INSTALL_PREFIX}")
SET(RES_DIR "${PREFIX}/res")
SET(LOCALE_DIR "${RES_DIR}/locale")
SET(SHARED_DIR "${PREFIX}/shared")

#ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(daemon)
ADD_SUBDIRECTORY(po)
